@@ -114,11 +114,6 @@
 			<version>1.2.46</version>
 		</dependency>
 		<dependency>
-			<groupId>com.ncf.supplychain.platform</groupId>
-			<artifactId>logging</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
 		</dependency>
@@ -140,14 +135,30 @@
 			<version>2.2.13</version>
 		</dependency>
 		<dependency>
-			<groupId>com.ncf.supplychain.platform</groupId>
-			<artifactId>redis</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>com.google.guava</groupId>-->
-			<!--<artifactId>guava</artifactId>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<version>2.2.13</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -158,67 +169,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<!--<build>-->
-		<!--<plugins>-->
-			<!--<plugin>-->
-				<!--<groupId>org.apache.maven.plugins</groupId>-->
-				<!--<artifactId>maven-compiler-plugin</artifactId>-->
-				<!--<version>2.3.2</version>-->
-			<!--</plugin>-->
-			<!--<plugin>-->
-				<!--<groupId>org.projectlombok</groupId>-->
-				<!--<artifactId>lombok-maven-plugin</artifactId>-->
-				<!--<version>1.14.8.0</version>-->
-				<!--<configuration>-->
-					<!--<encoding>UTF-8</encoding>-->
-				<!--</configuration>-->
-				<!--<executions>-->
-					<!--<execution>-->
-						<!--<phase>generate-sources</phase>-->
-						<!--<goals>-->
-							<!--<goal>delombok</goal>-->
-						<!--</goals>-->
-					<!--</execution>-->
-				<!--</executions>-->
-			<!--</plugin>-->
-			<!--<plugin>-->
-				<!--<groupId>org.apache.tomcat.maven</groupId>-->
-				<!--<artifactId>tomcat7-maven-plugin</artifactId>-->
-				<!--<version>2.2</version>-->
-				<!--<configuration>-->
-					<!--<uriEncoding>UTF-8</uriEncoding>-->
-					<!--<username>both</username>-->
-					<!--<password>tomcat</password>-->
-					<!--<path>/core-tester</path>-->
-					<!--<systemProperties>-->
-						<!--<JAVA_OPTS>-Xms1024m -Xmx1024m -XX:MaxPermSize=1024m-->
-						<!--</JAVA_OPTS>-->
-					<!--</systemProperties>-->
-					<!--<port>9999</port>-->
-				<!--</configuration>-->
-			<!--</plugin>-->
-			<!--<plugin>-->
-				<!--<groupId>org.apache.maven.plugins</groupId>-->
-				<!--<artifactId>maven-dependency-plugin</artifactId>-->
-				<!--<version>2.10</version>-->
-				<!--<configuration>-->
-					<!--<excludeGroupIds>junit</excludeGroupIds>-->
-				<!--</configuration>-->
-			<!--</plugin>-->
-			<!--<plugin>-->
-				<!--<groupId>com.ncf.supplychain.platform</groupId>-->
-				<!--<artifactId>controller-generator</artifactId>-->
-				<!--<version>1.0-SNAPSHOT</version>-->
-				<!--<configuration>-->
-					<!--<configurationFile>-->
-						<!--${basedir}/src/test/resources/controllerGeneratorConfig.xml-->
-					<!--</configurationFile>-->
-				<!--</configuration>-->
-			<!--</plugin>-->
-		<!--</plugins>-->
-		<!--<finalName>core-tester</finalName>-->
-	<!--</build>-->
-
 
 </project>
